[workspace]
resolver = "2"
members = ["calva", "calva-gltf", "calva-renderer", "demo"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
codegen-units = 1

[patch.crates-io]
# wgpu = { git = "https://github.com/gfx-rs/wgpu.git", branch = "master" }
# wgpu = { path = "../wgpu/wgpu" }
# egui = { git = "https://github.com/torokati44/egui.git", branch = "wgpu-25" }
# egui-wgpu = { git = "https://github.com/torokati44/egui.git", branch = "wgpu-25" }
# egui-winit = { git = "https://github.com/torokati44/egui.git", branch = "wgpu-25" }
egui = { git = "https://github.com/emilk/egui.git", branch = "main" }
egui-wgpu = { git = "https://github.com/emilk/egui.git", branch = "main" }
egui-winit = { git = "https://github.com/emilk/egui.git", branch = "main" }

# [patch."https://github.com/gfx-rs/naga"]
# naga = { path = "../naga" }
