[package]
name = "calva-egui"
version = "0.1.0"
edition = "2021"

[features]
default = []
winit = ["dep:winit", "dep:egui-winit"]
profiler = ["renderer/profiler"]

[dependencies]
renderer = { package = "calva-renderer", path = "../calva-renderer" }
thousands = "0.2"
egui = "0.21"
egui-winit = { version = "0.21", optional = true }
egui-wgpu = "0.21"
winit = { version = "0.28", optional = true }