[package]
name = "calva-gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { package = "calva-renderer", path = "../calva-renderer" }
anyhow = "1.0"
glam = { version = "0.20", features = ["serde", "bytemuck"] }
gltf = { version = "0.16.0", features = ["utils", "KHR_lights_punctual"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.3"
bytemuck = "1.7"
image = "0.23.14"
