[package]
name = "calva-gltf"
version = "0.1.0"
edition = "2021"

[dependencies]
renderer = { package = "calva-renderer", path = "../calva-renderer" }
anyhow = "1.0"
glam = { version = "0.30", features = ["serde", "bytemuck"] }
gltf = { version = "1.4", features = ["KHR_lights_punctual", "extras"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.5"
bytemuck = "1.22"
image = "0.25"
