[package]
name = "calva-renderer"
version = "0.1.0"
edition = "2021"

[features]
default = ["egui", "winit", "egui-winit"]
egui = ["dep:egui", "dep:egui-wgpu"]
egui-winit = ["dep:egui-winit"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.22", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
parking_lot = "0.12"
raw-window-handle = "0.6"
rand = "0.9"
wgpu = { version = "26.0" }
wgpu-profiler = { version = "0.24" }
wesl = { version = "0.2", features = ["quote"] }

# Egui
# egui = { version = "0.32", optional = true }
# egui-winit = { version = "0.32", optional = true }
# egui-wgpu = { version = "0.32", optional = true }
egui = { git = "https://github.com/emilk/egui", version = "0.32", optional = true }
egui-winit = { git = "https://github.com/emilk/egui", version = "0.32", optional = true }
egui-wgpu = { git = "https://github.com/emilk/egui", version = "0.32", optional = true }

# Winit
winit = { version = "0.30", optional = true }


[build-dependencies]
anyhow = "1.0"
glob = "0.3"
wesl = { version = "0.2", features = ["naga_ext"] }
