[package]
name = "calva-renderer"
version = "0.1.0"
edition = "2021"

[features]
default = ["winit", "egui", "egui-winit"]
egui = ["dep:egui", "dep:egui-wgpu"]
egui-winit = ["dep:egui-winit"]

[dependencies]
anyhow = "1.0"
bitflags = { version = "2.11", features = ["bytemuck"] }
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.32", features = ["bytemuck", "mint"] }
itertools = "0.14"
parking_lot = { version = "0.12", features = ["arc_lock"] }
raw-window-handle = "0.6"
rand = "0.10"
wgpu = { version = "29.0" }
wgpu-profiler = { version = "0.27" }
wesl = { version = "0.4" }
wesl-quote = { version = "0.4" }
downcast-rs = { version = "2.0" }

# Egui
egui = { version = "0.34", optional = true, features = ["mint"] }
egui-winit = { version = "0.34", optional = true }
egui-wgpu = { version = "0.34", optional = true }

# Winit
winit = { version = "0.30", optional = true }

[build-dependencies]
anyhow = "1.0"
glob = "0.3"
wesl = { version = "0.4", features = ["naga-ext"] }
