[package]
name = "calva"
version = "0.1.0"
edition = "2018"

[features]
default = ["egui", "winit", "gltf", "profiler"]
winit = ["renderer/winit"]
profiler = ["renderer/profiler"]
egui = ["renderer/egui"]

[dependencies]
gltf = { package = "calva-gltf", path = "../calva-gltf", optional = true }
renderer = { package = "calva-renderer", path = "../calva-renderer" }
