[package]
name = "calva"
version = "0.1.0"
edition = "2018"

[features]
default = ["egui", "winit", "gltf"]
winit = ["renderer/winit"]
egui = ["renderer/egui"]

[dependencies]
gltf = { package = "calva-gltf", path = "../calva-gltf", optional = true }
renderer = { package = "calva-renderer", path = "../calva-renderer" }
