[package]
name = "calva-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
calva = { path = "../calva" }
anyhow = "1.0"
async-std = { version = "1.12", features = ["attributes"] }
bytemuck = "1.12"
env_logger = "0.10"
glam = { version = "0.23", features = ["bytemuck", "rand"] }
image = "0.24"
noise = "0.8"
winit = "0.28"
rand = "0.8"
rand_seeder = "0.2"
serde = "1.0"
serde_json = "1.0"