[package]
name = "calva-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
calva = { path = "../calva" }
anyhow = "1.0"
async-std = { version = "1.13", features = ["attributes"] }
bytemuck = "1.22"
env_logger = "0.11"
glam = { version = "0.30", features = ["bytemuck", "rand"] }
gltf = { version = "1.4", features = ["extras"] }
image = "0.25"
noise = "0.9"
winit = "0.30"
pollster = "0.4"
rand = "0.9"
rand_seeder = "0.4"
serde = "1.0"
serde_json = "1.0"
