[package]
name = "calva-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
calva = { path = "../calva" }
anyhow = "1.0"
async-std = { version = "1.13", features = ["attributes"] }
bytemuck = "1.25"
colored = "3.0"
env_logger = "0.11"
glam = { version = "0.32", features = ["bytemuck", "rand", "mint"] }
gltf = { version = "1.4", features = ["extras"] }
image = "0.25"
itertools = "0.14"
mint = "0.5"
noise = "0.9"
winit = "0.30"
rand = "0.10"
rand_seeder = "0.5"
serde = "1.0"
serde_json = "1.0"
wesl = "0.4"
wesl-quote = "0.4"
