[package]
name = "calva-gltf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = { package = "calva-renderer", path = "../calva-renderer" }
anyhow = "1.0"
glam = { version = "0.20", features = ["serde"] }
gltf = "0.15.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.3"
bytemuck = "1.7"
